--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -37,7 +37,7 @@
         android:layout_height="55dp"
         android:layout_below="@+id/addNoteHeading"
         android:layout_marginTop="16dp"
-        android:background="@drawable/blue_border"
+        android:background="@drawable/field_borders"
         android:fontFamily="@font/adamina"
         android:hint="@string/title"
         android:maxLines="1"
@@ -50,7 +50,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/titleEditText"
         android:layout_marginTop="12dp"
-        android:background="@drawable/blue_border"
+        android:background="@drawable/field_borders"
         android:fontFamily="@font/adamina"
         android:gravity="top"
         android:hint="@string/description"
