--- a/app/src/main/res/drawable/field_borders.xml
+++ b/app/src/main/res/drawable/field_borders.xml
@@ -5,8 +5,8 @@
 
     <stroke
     android:width="1dp"
-    android:color="@color/borderblue"/>
+    android:color="#6B6C6E"/>
     <corners
-        android:radius="8dp"/>
+        android:radius="10dp"/>
 
 </shape>
