--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/cheeky"
     android:padding="16dp"
     tools:context=".notes.UpdateNoteActivity">
 
@@ -49,7 +50,7 @@
         android:padding="12dp"
         android:fontFamily="@font/adamina"
         android:textSize="20sp"
-        android:background="@drawable/blue_border"
+        android:background="@drawable/field_borders"
         android:layout_marginTop="16dp"
         android:layout_below="@+id/editNoteHeading"
         android:maxLines="1"/>
@@ -63,7 +64,7 @@
         android:textAlignment="center"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="2dp"
-        android:background="@drawable/blue_border"/>
+        android:background="@drawable/field_borders"/>
 
     <EditText
         android:id="@+id/updateContentEditText"
@@ -74,7 +75,7 @@
         android:fontFamily="@font/adamina"
         android:padding="12dp"
         android:textSize="18sp"
-        android:background="@drawable/blue_border"
+        android:background="@drawable/field_borders"
         android:layout_below="@+id/updateTitleEditText"
         android:layout_marginTop="30dp" />
 
