--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -66,31 +66,37 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="20dp"
-        android:background="@drawable/custombtn"
-        android:backgroundTint="#3E514949"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
-        <ImageView
-            android:id="@+id/clock"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="7dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ic_clock" />
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="-30dp"
+            android:layout_marginLeft="-30dp"
+            android:layout_marginRight="-30dp"
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            android:scaleX="0.7"
+            android:scaleY="0.7" />
 
-        <TextView
-            android:id="@+id/tvSelected"
-            android:layout_width="70dp"
-            android:layout_height="25dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="7dp"
-            android:fontFamily="@font/adamina"
-            android:textAlignment="center"
-            android:text="Set Alarm"
-            android:textColor="#998E8893"
-            android:textSize="13sp" />
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="-30dp"
+            android:layout_marginStart="-80dp"
+            android:layout_marginEnd="-30dp"
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            android:timePickerMode="spinner" />
+
     </LinearLayout>
 </LinearLayout>
