--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -6,32 +6,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".notes.NotesFragment">
 
-    <TextView
-        android:id="@+id/notesHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/adamina"
-        android:text="Protege Notes"
-        android:textColor="@color/blue"
-        android:textSize="24sp" />
-<!--    <com.google.android.material.switchmaterial.SwitchMaterial-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/switchBtn"-->
-<!--        android:layout_marginStart="280dp"-->
-<!--        app:layout_constraintWidth_percent="0.8"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="330dp"
+        android:layout_height="45dp"
+        android:background="@drawable/search_bar_background"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="40dp">
+
+        <EditText
+            android:id="@+id/searchView"
+            android:layout_width="320dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="45dp"
+            android:drawablePadding="10dp"
+            android:backgroundTint="@android:color/transparent"
+            android:drawableStart="@drawable/ic_search"
+            android:hint="Search Note"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRView"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="674dp"
+        android:layout_marginTop="85dp"
         android:padding="16dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -46,3 +48,17 @@
         android:tint="@color/black" />
 
 </FrameLayout>
+<!--<TextView-->
+<!--android:id="@+id/notesHeading"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content"-->
+<!--android:layout_marginTop="4dp"-->
+<!--android:fontFamily="@font/adamina"-->
+<!--android:text="Protege Notes"-->
+<!--android:textColor="@color/blue"-->
+<!--android:textSize="24sp"-->
+<!--app:layout_constraintBottom_toTopOf="@+id/searchView"-->
+<!--app:layout_constraintEnd_toEndOf="parent"-->
+<!--app:layout_constraintStart_toStartOf="parent"-->
+<!--app:layout_constraintTop_toTopOf="parent"-->
+<!--app:layout_constraintVertical_bias="1.0" />-->
