--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="antique">#FFF9F9</color>
     <color name="blue">#5882F1</color>
-    <color name="borderblue">#0D0795</color>
+    <color name="gray">#DFDFDF</color>
+    <color name="border_blue">#040067</color>
     <color name="cool_orange">#A85136</color>
 </resources>
