--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -7,53 +7,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/cheeky"
     android:padding="16dp"
+    android:background="#F4F4F4"
     tools:context=".notes.UpdateNoteActivity">
 
     <TextView
         android:id="@+id/editNoteHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="95dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/andika"
         android:text="Update Note"
         android:textColor="@color/blue"
         android:textSize="24sp" />
     <TextView
         android:id="@+id/updateDate"
-        android:layout_width="200dp"
+        android:layout_width="261dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="3dp"
         android:layout_toStartOf="@+id/updateSaveButton"
-        android:fontFamily="@font/andika"
-        android:text=""
-        android:visibility="gone"
-        android:textColor="@color/blue"
-        android:textSize="24sp" />
+        android:fontFamily="@font/adamina"
+        android:textColor="#606060"
+        android:textSize="11sp" />
+
     <ImageView
         android:id="@+id/updateSaveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_done"
-        android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/editNoteHeading"
-        android:layout_marginEnd="6dp"/>
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/ic_done" />
+
     <EditText
         android:id="@+id/updateTitleEditText"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="Title"
-        android:padding="12dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
-        android:textSize="20sp"
-        android:background="@drawable/field_borders"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/editNoteHeading"
-        android:maxLines="1"/>
+        android:layout_marginTop="89dp"
+        android:hint="Title"
+        android:textColorHint="#606060"
+        android:textColor="@color/black"
+        android:backgroundTint="@android:color/transparent"
+        android:inputType="textCapSentences"
+        android:maxLines="1"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
     <TextView
         android:id="@+id/charCountUpdate"
         android:layout_width="55dp"
@@ -63,19 +70,22 @@
         android:layout_marginStart="10dp"
         android:textAlignment="center"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="2dp"
-        android:background="@drawable/field_borders"/>
+        android:textColor="@color/black"
+        android:layout_marginEnd="2dp" />
 
     <EditText
         android:id="@+id/updateContentEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:hint="Description"
-        android:gravity="top"
         android:fontFamily="@font/adamina"
-        android:padding="12dp"
-        android:textSize="18sp"
-        android:background="@drawable/field_borders"
+        android:padding="3dp"
+        android:backgroundTint="@android:color/transparent"
+        android:gravity="top"
+        android:hint="@string/description"
+        android:textColorHint="#606060"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:capitalize="sentences"
         android:layout_below="@+id/updateTitleEditText"
         android:layout_marginTop="30dp" />
 
