--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -9,9 +9,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="330dp"
         android:layout_height="45dp"
-        android:background="@drawable/search_bar_background"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="40dp"
+        android:background="@drawable/search_bar_background">
 
         <EditText
             android:id="@+id/searchView"
@@ -19,14 +19,17 @@
             android:layout_height="45dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="45dp"
-            android:drawablePadding="10dp"
             android:backgroundTint="@android:color/transparent"
             android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="10dp"
             android:hint="Search Note"
+            android:textColor="@color/black"
+            android:textColorHint="#A3A0A0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
