--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -50,14 +50,15 @@
         android:textColor="#606060"
         android:textSize="11sp" />
 
-    <ImageView
+    <Button
         android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_done"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
+        android:text="Save"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/buttonDisabledColor"
         android:layout_alignTop="@id/addNoteHeading"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="6dp"/>
 
     <EditText
