--- a/app/src/main/res/layout/fragment_archives.xml
+++ b/app/src/main/res/layout/fragment_archives.xml
@@ -9,7 +9,11 @@
         android:id="@+id/archivedRVView"
         android:layout_width="match_parent"
         android:layout_height="674dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="50dp"
         android:padding="16dp" />
+    <include
+        android:id="@id/noArchived"
+        layout="@layout/empty_archives_activity"
+        android:visibility="gone"/>
 
 </FrameLayout>
