--- a/app/src/main/res/layout/fragment_to_do.xml
+++ b/app/src/main/res/layout/fragment_to_do.xml
@@ -5,17 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".todo.ToDoFragment">
 
-    <TextView
-        android:id="@+id/notesHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/adamina"
-        android:text="@string/protege_todo"
-        android:textColor="#7A0595"
-        android:textSize="24sp" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todoRView"
         android:layout_width="match_parent"
@@ -33,4 +22,8 @@
         android:contentDescription="@string/add_new_note"
         android:src="@drawable/ic_add"
         android:tint="@color/black" />
+    <include
+        android:id="@id/noToDo"
+        layout="@layout/empty_todo_activity"
+        android:visibility="gone"/>
 </FrameLayout>
