--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="search_black">#808080</color>
+    <color name="search_black">#AFAEAE</color>
     <color name="white">#FFFFFFFF</color>
     <color name="antique">#FFF9F9</color>
     <color name="blue">#5882F1</color>
     <color name="gray">#DFDFDF</color>
     <color name="purple">#8E58F1</color>
+    <color name="categories_fab">#F31B92</color>
     <color name="active_indicator">#D0BCFF</color>
     <color name="buttonEnabledColor">#008577</color>
     <color name="buttonDisabledColor">#D3D3D3</color>
