--- a/app/src/main/res/layout/fragment_bottom_sheets.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheets.xml
@@ -42,4 +42,13 @@
         android:hint="Name"
         android:textColor="@color/black"
         android:textColorHint="@color/black" />
+    <TextView
+        android:id="@+id/dateModification"
+        android:layout_width="261dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="20dp"
+        android:fontFamily="@font/adamina"
+        android:textColor="#606060"
+        android:textSize="13sp" />
 </LinearLayout>
