--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -56,8 +56,8 @@
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:text="Save"
-        android:textColor="@color/white"
-        app:backgroundTint="@color/buttonDisabledColor"
+        android:textColor="@color/buttonDisabledColor"
+        app:backgroundTint="@android:color/transparent"
         android:layout_alignTop="@id/addNoteHeading"
         android:layout_marginEnd="6dp"/>
 
