--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -12,17 +12,30 @@
     tools:context=".notes.UpdateNoteActivity">
 
     <TextView
-        android:id="@+id/editNoteHeading"
+        android:id="@+id/addNoteHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="95dp"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/andika"
-        android:text="Update Note"
+        android:text="@string/add_note"
         android:textColor="@color/blue"
         android:textSize="24sp" />
+
+    <ImageView
+        android:id="@+id/passwordSetter"
+        android:layout_width="20dp"
+        android:layout_height="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="38dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="99dp"
+        android:layout_toStartOf="@+id/saveButton"
+        android:layout_toEndOf="@+id/addNoteHeading"
+        android:src="@drawable/key_svgrepo_com" />
+
     <TextView
         android:id="@+id/updateDate"
         android:layout_width="261dp"
@@ -37,30 +50,44 @@
         android:textColor="#606060"
         android:textSize="11sp" />
 
-    <ImageView
+    <Button
         android:id="@+id/updateSaveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@id/editNoteHeading"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_done" />
+        android:text="Save"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/buttonDisabledColor"
+        android:layout_alignTop="@id/addNoteHeading"
+        android:layout_marginEnd="6dp"/>
 
     <EditText
         android:id="@+id/updateTitleEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_below="@+id/addNoteHeading"
+        android:layout_marginTop="45dp"
         android:fontFamily="@font/adamina"
-        android:layout_marginTop="89dp"
-        android:hint="Title"
+        android:hint="@string/title"
         android:textColorHint="#606060"
         android:textColor="@color/black"
         android:backgroundTint="@android:color/transparent"
         android:inputType="textCapSentences"
         android:maxLines="1"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
+
+    <ImageView
+        android:id="@+id/bullets"
+        android:visibility="gone"
+        android:layout_width="44dp"
+        android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="109dp"
+        android:layout_marginEnd="8dp"
+        android:layout_toStartOf="@+id/charCountUpdate"
+        android:src="@drawable/bullets" />
+
     <TextView
         android:id="@+id/charCountUpdate"
         android:layout_width="55dp"
@@ -69,24 +96,38 @@
         android:layout_alignEnd="@+id/updateContentEditText"
         android:layout_marginStart="10dp"
         android:textAlignment="center"
-        android:layout_marginTop="4dp"
         android:textColor="@color/black"
-        android:layout_marginEnd="2dp" />
+        android:visibility="gone"
+        android:textIsSelectable="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="2dp"/>
 
     <EditText
         android:id="@+id/updateContentEditText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="396dp"
+        android:layout_height="1000dp"
+        android:layout_below="@+id/updateTitleEditText"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/adamina"
-        android:padding="3dp"
         android:backgroundTint="@android:color/transparent"
         android:gravity="top"
         android:hint="@string/description"
         android:textColorHint="#606060"
         android:textColor="@color/black"
         android:textSize="15sp"
-        android:capitalize="sentences"
-        android:layout_below="@+id/updateTitleEditText"
-        android:layout_marginTop="30dp" />
+        android:capitalize="sentences"/>
+
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/toolBox"-->
+    <!--        android:layout_width="420dp"-->
+    <!--        android:layout_height="64dp"-->
+    <!--        android:layout_below="@+id/contentEditText"-->
+    <!--        android:layout_alignParentEnd="true"-->
+    <!--        android:layout_marginTop="-52dp"-->
+    <!--        android:background="#3E3D3D"-->
+    <!--        android:orientation="horizontal">-->
+
+    <!--    </LinearLayout>-->
 
 </RelativeLayout>
