--- a/app/src/main/res/layout/activity_view_notes_in_category.xml
+++ b/app/src/main/res/layout/activity_view_notes_in_category.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="#F4F4F4"
-    tools:context=".categories.CategoryViewActivity">
+    tools:context=".categories.categoryviews.ViewNotesInFolder">
 
+    <Button
+        android:id="@+id/saveFolder"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:text="Save"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/buttonDisabledColor"
+        android:layout_marginEnd="6dp"/>
 
     <TextView
         android:id="@+id/dateModified"
