--- a/app/src/main/res/layout/folder_item_viewed.xml
+++ b/app/src/main/res/layout/folder_item_viewed.xml
@@ -28,23 +28,10 @@
                 android:textColor="@color/blue"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
-            <ImageView
-                android:id="@+id/rigggeeeeddddd"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="55dp"
-                android:src="@drawable/more_button"/>
-            <ImageView
-                android:id="@+id/deleteFolder"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_delete"/>
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/date_Modifiedzz"
+            android:id="@+id/dateModified"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
