--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:text="Title"
                 android:textColor="@color/blue"
-                android:textSize="16sp"
+                android:textSize="15.4sp"
+                android:maxLength="35"
                 android:textStyle="bold"/>
             <ImageView
                 android:id="@+id/archiveButton"
@@ -34,7 +35,7 @@
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="30dp"
-                android:src="@drawable/rv_archive_icon"/>\
+                android:src="@drawable/rv_archive_icon"/>
             <ImageView
                 android:id="@+id/displayMore"
                 android:layout_width="24dp"
