yet another commit

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
         android:icon="@drawable/archive_icon"
         android:title="Archives" />
     <item
-        android:id="@+id/navigation_categories"
+        android:id="@+id/navigation_folders"
         android:icon="@drawable/category_icon"
-        android:title="Categories" />
+        android:title="Folders" />
 </menu>
